# mpl_calibration_toolbox

./: CMakeLists.txt  README.md  package.xml
config/: camera_mocap_calibration.yaml  intrinsic_calibration.yaml  joint_extrinsic_calibration.yaml  msg_topic.yaml
data/: metavision_calibration_pattern_chessboard.html  rgbd_color_camera_factory_intrinsic_results.yaml
include/: CameraIntrinsics.hpp  CeresCostFunctor.hpp  Checkerboard.hpp  ImageReader.hpp  utility.hpp
launch/: camera_mocap_calibration.launch  intrinsic_calibration.launch  joint_extrinsic_calibration.launch
src/: handeye_calibrator.cpp  image_publisher.cpp  joint_extrinsic_calibrator.cpp
